--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
     "rxjs": "~7.8.0",
+    "swiper": "^11.0.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
@@ -29,13 +30,14 @@
     "@angular/cli": "^17.2.1",
     "@angular/compiler-cli": "^17.2.0",
     "@compodoc/compodoc": "^1.1.23",
-    "@storybook/addon-docs": "^7.6.17",
-    "@storybook/addon-essentials": "^7.6.17",
-    "@storybook/addon-interactions": "^7.6.17",
-    "@storybook/addon-links": "^7.6.17",
-    "@storybook/angular": "^7.6.17",
-    "@storybook/blocks": "^7.6.17",
-    "@storybook/test": "^7.6.17",
+    "@storybook/addon-docs": "^8.1.0-alpha.0",
+    "@storybook/addon-essentials": "^8.1.0-alpha.0",
+    "@storybook/addon-interactions": "^8.1.0-alpha.0",
+    "@storybook/addon-links": "^8.1.0-alpha.0",
+    "@storybook/addon-mdx-gfm": "^8.1.0-alpha.0",
+    "@storybook/angular": "^8.1.0-alpha.0",
+    "@storybook/blocks": "^8.1.0-alpha.0",
+    "@storybook/test": "^8.1.0-alpha.0",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
@@ -43,9 +45,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "storybook": "^7.6.17",
-    "typescript": "~5.3.2"
+    "storybook": "^8.1.0-alpha.0",
+    "typescript": "~5.3.2",
+    "webpack": "^5.90.3"
   }
 }
